--- a/daily/must do interview.ipynb
+++ b/daily/must do interview.ipynb
@@ -693,9 +693,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed75496b-0e9d-43c6-84e1-5c2358ad511a",
+   "metadata": {},
+   "source": [
+    "# Python questions from Mock Test after new teams 8/6/24\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c6aa5d7f-26ee-49a7-8c21-9ea82bbbe06e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Question 1: Write a list comprehension to generate a list of all prime numbers between 2 and 100 (inclusive)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "90b69d6a-cbee-491e-85e9-60ef20234b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2,3,5,7,11,13,17,19,23,29,31,37,41,43,47,53,59,61,67,71,73,79,83,89,97,"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2,101):\n",
+    "    for j in range(2,i):\n",
+    "        if i%j==0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(i,end=\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "dedbad59-3b5b-48b8-8562-a02709db9400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'H': 72, 'e': 101, 'l': 108, 'o': 111}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 3: Write a dictionary comprehension that maps each character in a given string to its ASCII value, but only if the character is a letter. \n",
+    "#For example, given the string 'Hello123', the output should be {'H': 72, 'e': 101, 'l': 108, 'o': 111}.\n",
+    "str = 'Hello123'\n",
+    "d = {}\n",
+    "for i in str:\n",
+    "    if i.isalpha():\n",
+    "        d[i]=ord(i)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e6ef25ed-d9df-4aaf-982f-f5f953b83392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heelloo woorld\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 4: Write a Python function that takes a string and returns the string with all the vowels doubled. \n",
+    "#For example, given the input 'hello world', the output should be 'heelloo woorld'.\n",
+    "s = 'hello world'\n",
+    "v = ['a','e','i','o','u']\n",
+    "ns=''\n",
+    "for i in s:\n",
+    "    if i in v:\n",
+    "        ns+=i\n",
+    "        ns+=i\n",
+    "    else:\n",
+    "        ns+=i\n",
+    "print(ns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3b4b0d06-4423-4137-8f1f-2501e2503c2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 6: Write a Python function that takes a string and returns the longest substring without repeating characters. \n",
+    "#For example, given the input 'abcabcbb', the output should be 'abc'.\n",
+    "\n",
+    "r = 'abcabcbb'\n",
+    "o=''\n",
+    "for i in r:\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c0162f-8515-47eb-86d9-1893be5eed04",
+   "id": "988c7020-8dda-4b70-ab0f-193e050cc711",
    "metadata": {},
    "outputs": [],
    "source": []
